--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -22,5 +22,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'edit/edit.scss';
 @import 'home/home.scss';
 @import 'main/main.scss';
+@import 'trends/trends.scss';
 @import 'modal/modal.scss';
 // endinjector
