--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
+@import 'allGoogle/allGoogle.scss';
 @import 'edit/edit.scss';
 @import 'home/home.scss';
 @import 'main/main.scss';
