frontend structure fix for trends display

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -23,6 +23,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'edit/edit.scss';
 @import 'home/home.scss';
 @import 'main/main.scss';
+@import 'singleTrend/singleTrend.scss';
 @import 'trends/trends.scss';
 @import 'modal/modal.scss';
 // endinjector
