--- a/client/app/allGoogle/allGoogle.scss
+++ b/client/app/allGoogle/allGoogle.scss
@@ -1,5 +1,5 @@
 /* override bootstrap styles */
-@import url('http://fonts.googleapis.com/css?family=Oswald:300,400:latin,latin-ext');
+// @import url('http://fonts.googleapis.com/css?family=Oswald:300,400:latin,latin-ext');
 
 // .negArticleButton {
 //   background-color: #d62728;
@@ -11,6 +11,9 @@
 // .articleButtons {
 //   // margin-left: 30px;
 // }
+
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css");
+
 #barChart {
   position: center;
 }
